# PaddleDetection

deploy/cpp/: CMakeLists.txt  build.sh  main.cc  object_detector.cc  object_detector.h
deploy/cpp/include/: object_detector.h  preprocess_op.h
deploy/cpp/preprocess/: preprocess_ops.cc  preprocess_ops.h
deploy/cpp/scripts/: bootstrap.sh
deploy/cpp/src/: main.cc  object_detector.cc  preprocess_op.cc
deploy/cpp/utils/: utils.h  yml_parse.h
deploy/python/: cpp_infer.py  infer.py  test.sh  util.py
inference/yml_parse/: CMakeLists.txt  infer_cfg.yml  yml_parse.cc
